# Graphics

./: .clang-tidy  .geminiignore  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  project_context.txt  vcpkg.json
app/: assets.c  assets.h  layout_tests.c  main.c  main_stub.c  render_commands_tests.c  scene_ui.c  scene_ui.h  scene_ui_tests.c  scroll.c  scroll.h  transform_tests.c  ui_json.c  ui_json.h  vulkan_renderer.c  vulkan_renderer.h
assets/: layout.json  model.json  styles.json  ui.json
assets/config/: global.yaml  pipeline.yaml  ui_schema.yaml
assets/global_state/: schema.yaml
assets/global_state/config/: defaults.yaml  environment.yaml
assets/scenes/: gear_reducer.yaml  hinge_pair.yaml  static_bracket.yaml
assets/shaders/: editor_nodes.frag  editor_nodes.vert  render_instanced.frag  render_instanced.vert  render_wires.frag  render_wires.vert  shader.frag  shader.vert  ui_default.frag  ui_default.vert  unified.frag  unified.vert
assets/shaders/compute/: picking.comp  wires.comp
assets/ui/: default_graph.yaml  editor.yaml  floating_example.yaml  manifest.yaml  palette_config.yaml  schema.yaml  test_binding.yaml
assets/ui/components/: card.yaml  chip.yaml  divider.yaml  muted.yaml  panelPrimaryScroll.yaml  panelSecondaryScroll.yaml  sectionHeader.yaml  treeHeader.yaml  treeLabel.yaml  treeRow.yaml
assets/ui/config/: floating_example.yaml  layout.yaml  model.yaml  styles.yaml  ui.yaml
assets/ui/layouts/: editor_layout.yaml
assets/ui/lib/: sidebar.yaml
assets/ui/templates/: inspector_default.yaml  inspector_field.yaml  inspector_title.yaml  node.yaml  palette_item.yaml  port.yaml  sidebar.yaml  value_row.yaml
docs/: NewIdeas.md  api_reference.md  architecture.md  architecture_audit_and_roadmap.md  cad_development_task.md  cad_yaml_spec.md  current_state.md  getting_started.md  input_coordinate_conventions.md  roadmap.md  technical_audit.md  technical_design.md  ui_config.md  ui_modernization_plan.md
docs/architecture/: core_module_structure.md  render_module_structure.md
logs/: run_output.txt  tmp_graph.comp
services/: render_runtime_service.c  render_runtime_service.h  render_service.c  render_service.h  scene_service.c  scene_service.h  service.h  service_events.h  service_manager.c  service_manager.h  service_registry.c  ui_service.c  ui_service.h
services/render_runtime/: render_runtime_service.c  render_runtime_service.h  runtime.c  runtime.h
services/render_service/: render_service.c  render_service.h
services/scene/: cad_scene.c  cad_scene_yaml.c  cad_scene_yaml.h  module_yaml_loader.c  module_yaml_loader.h  scene_service.c  scene_service.h
services/ui/: compositor.c  compositor.h  layout_tree.c  layout_tree.h  model_style.c  model_style.h  render_tree.c  render_tree.h  scene_ui.c  scene_ui.h  scroll.c  scroll.h  ui_config.c  ui_config.h  ui_context.c  ui_context.h  ui_node.c  ui_node.h  ui_parser.c  ui_service.c  ui_service.h  widget_list.c  widget_list.h  widget_materializer.c
src/: Graphics.c  Graphics.h  cad_scene.c  cad_scene.h  cad_scene_yaml.c  config_document.c  config_document.h  config_io.h  coordinate_transform.c  coordinate_transform.h  layout.c  memory_utils.c  memory_utils.h  module_yaml_loader.c  module_yaml_loader.h  render_commands.c  render_commands.h  state_manager.h
src/app/: app_services.c  app_services.h  main.c  main_stub.c
src/app/context/: core_context.h
src/assets/: assets.c  assets.h
src/cad/: cad_scene_yaml.h
src/config/: config_document.c  config_document.h  config_io.c  module_yaml_loader.c  module_yaml_loader.h  simple_yaml.c  simple_yaml.h
src/coordinate_systems/: coordinate_systems.c  coordinate_systems.h  layout_geometry.c  layout_geometry.h
src/core/: Graphics.h  README.md  context.h  layout.h  vertex_buffers.c  vertex_buffers.h
src/core/config/: config_document.c  config_document.h  config_io.c  module_yaml_loader.c  module_yaml_loader.h  simple_yaml.c  simple_yaml.h
src/core/layout/: layout_geometry.c  layout_geometry.h
src/core/math/: coordinate_spaces.c
src/core/memory/: buffer.c
src/core/platform/: fs.c  glfw_platform.c  glfw_platform.h
src/core/rendering/: render_composition.h  ui_mesh_builder.c  ui_mesh_builder.h
src/core/service_manager/: service_manager.c  service_manager.h  service_registry.c
src/core/utils/: buffer_reserve.c
src/domains/cad_model/: cad_scene.h  cad_scene_yaml.c  cad_scene_yaml.h  scene_service.c  scene_service.h
src/domains/math_model/: math_graph.c  math_graph.h  math_mesh_builder.h  math_scene.h  transpiler.c  transpiler.h
src/engine/assets/: assets.c  assets.h  assets_service.c  assets_service.h
src/engine/core/: engine.c  engine.h  input_types.h
src/engine/graphics/: compute_graph.c  compute_graph.h  gpu_input.c  gpu_input.h  graphics_types.h  layer_constants.h  pipeline.h  pipeline_loader.c  pipeline_loader.h  primitive_batcher.c  primitives.h  (+14 more)
src/input/: README.md
src/memory/: README.md  buffer.c  buffer.h
src/platform/: fs.c  fs.h  glfw_platform.c  glfw_platform.h  platform.h
src/render/: render_context.h  render_service.c  render_service.h  renderer_backend.c  renderer_backend.h  vulkan_renderer.c  vulkan_renderer.h
src/runtime/: app_services.c  app_services.h  runtime.c  runtime.h
src/scene/: scene_service.c
src/services/: service.h  service_events.h  service_manager.c  service_manager.h  service_registry.c
src/state/: state_manager.c  state_manager.h
src/ui/: scene_ui.c  scene_ui.h  scroll.c  scroll.h  ui_config.c  ui_config.h  ui_context.h  ui_json.c  ui_json.h  ui_service.c  ui_service.h
tests/: config_tests.c  layout_tests.c  math_mesh_tests.c  math_scene_tests.c  memory_tests.c  render_commands_tests.c  render_composition_tests.c  render_graph_tests.c  scene_ui_tests.c  scene_yaml_tests.c  string_tests.c  test_framework.h  text_clip_integration_tests.c  transform_tests.c  transpiler_tests.c  ui_compositor_tests.c  ui_mesh_builder_tests.c  ui_tests.c  vertex_buffers_tests.c
tools/: build_shaders.py  codegen.py  generate_services.py  smart_packer.py  update_includes.py
(+360 files in other folders)
